<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园日记</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <!--注册-->
    <string name="login_account">账户</string>
    <string name="login_login">登录</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_register">没有账号？免费注册</string>
    <string name="register_regist">注册</string>
    <string name="register_email">邮箱</string>
    <string name="nick_name">昵称</string>
    <string name="register_confirm">确认密码</string>
    <!--登陆-->
    <string name="member_signin">会员登录</string>
    <string name="wrong_username">请输入正确的用户名</string>
    <string name="username_too_short">用户名过短</string>
    <string name="username_too_long">用户名过长</string>
    <string name="wrong_password">请输入正确的密码</string>
    <string name="password_too_short">密码过短</string>
    <string name="password_too_long">密码过长</string>
    <string name="wrong_email">请输入正确的邮箱</string>
    <string name="signing_in">登录中</string>
    <string name="member_signup">会员注册</string>
    <string name="please_input">请输入</string>
    <string name="signing_up">注册中</string>
    <string name="cancel">取消</string>
    <string name="publish_empty_text">想说什么…</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_local">从相册中选取</string>

    <string name="profile">个人信息</string>
    <string name="head_icon">头像</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="click_login">点击登录</string>
    <string name="change">修改</string>
    <string name="mobile_num">手机号</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="retype_new_password">再输入</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="change_password_failed">修改密码失败</string>
    <string name="error_invalid_old_password">原密码太短</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_password_not_same">两次输入密码不相同</string>
    <string name="dialog_photo_take_pic">拍照</string>
    <string name="dialog_photo_pick_pic">从手机相册选择</string>
    <string name="dialog_cancel">取消</string>
    <string name="fragment_mine_logout">退出登陆</string>
    <string name="fragment_mine_login">点击头像登陆</string>
    <string name="logout_success">登出成功</string>
    <string name="logout_failed">登出失败</string>
</resources>
