<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/head_titlebar" />

    <LinearLayout
        android:layout_below="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/head_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/head_icon"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">


                <com.campus.diary.view.RoundImageView
                    android:id="@+id/head_pic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/default_account_icon" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_right_arrow_press" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/head"
                android:layout_marginTop="10dp"
                android:background="#FF909090" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/click_login"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/user_text"
                android:layout_marginTop="10dp"
                android:background="#FF909090" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/change_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/change"
                    android:textColor="#157ACE"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_right_arrow_press" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/change_password_text"
                android:layout_marginTop="10dp"
                android:background="#FF909090" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/nick_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/change_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/changenick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="设置"
                    android:textColor="#157ACE"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_right_arrow_press" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/nick_name"
                android:layout_marginTop="10dp"
                android:background="#FF909090" />
        </RelativeLayout>


        <Button
            android:id="@+id/profile_logout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_activity_profile_logout"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/fragment_mine_logout"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <include
        android:id="@+id/select_pic"
        layout="@layout/select_pic_dialog" />

</RelativeLayout>
