<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/body"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/head_titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/body_cont"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/log_in_user_name_icon" />

            <EditText
                android:id="@+id/login_name"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:background="#ffffff"
                android:hint="@string/login_username"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:maxLength="20"
                android:textSize="16dp" />
        </FrameLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dp"
            android:background="#c4c4c4" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/log_in_key_icon" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:background="#ffffff"
                android:hint="@string/login_password"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#000000"
                android:maxLength="20"
                android:textSize="16dp" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:minWidth="100dp"
        android:text="@string/login_register"
        android:textColor="#666666"
        android:textSize="18dp" />

</LinearLayout>